# agent-naver-news

./: .env.example  .gitignore  README.md  main.py  prd.md  pyproject.toml
src/: main.py
src/agents/: graph.py
src/models/: schemas.py
src/nodes/: scraper.py  summarizer.py
src/utils/: config.py  formatter.py
tests/: test_config.py  test_scraper.py  test_summarizer.py
